--- a/src/patternfly/demos/Masthead/masthead-template-content-toolbar-content.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-content-toolbar-content.hbs
@@ -43,22 +43,22 @@
       {{#> nav-list}}
         {{#> nav-item}}
           {{#> nav-link nav-link--href="#" nav-link--icon="cube"}}
-            Link1
+            Cube
           {{/nav-link}}
         {{/nav-item}}
         {{#> nav-item}}
           {{#> nav-link nav-link--href="#" nav-link--current="true" nav-link--icon="folder"}}
-            Current
+            Dir
           {{/nav-link}}
         {{/nav-item}}
         {{#> nav-item}}
           {{#> nav-link nav-link--href="#" nav-link--icon="cloud"}}
-            Link3
+            Cloud
           {{/nav-link}}
         {{/nav-item}}
         {{#> nav-item}}
           {{#> nav-link nav-link--href="#" nav-link--icon="code"}}
-            Link4
+            Code
           {{/nav-link}}
         {{/nav-item}}
       {{/nav-list}}
