--- a/src/patternfly/components/Compass/compass-panel.hbs
+++ b/src/patternfly/components/Compass/compass-panel.hbs
@@ -2,6 +2,7 @@
   {{setModifiers
     compass-panel--HasNoPadding='pf-m-no-padding'
     compass-panel--IsPill='pf-m-pill'
+    compass-panel--IsSharp='pf-m-sharp'
     compass-panel--IsFullHeight='pf-m-full-height'
     compass-panel--HasNoBorder='pf-m-no-border'
     compass-panel--IsScrollable='pf-m-scrollable'
