--- a/src/patternfly/components/Compass/compass.hbs
+++ b/src/patternfly/components/Compass/compass.hbs
@@ -5,7 +5,7 @@
   {{setModifiers
     compass--IsStart='pf-m-start'
     compass--IsEnd='pf-m-end'
-    compass--IsMaxCanvas='pf-m-max-canvas'
+    compass--IsDocked='pf-m-docked'
     compass--modifier=compass--modifier}}"
   {{#if compass--attribute}}
     {{{compass--attribute}}}
