--- a/src/patternfly/demos/Masthead/masthead-template-content-toolbar-content.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-content-toolbar-content.hbs
@@ -42,24 +42,16 @@
     {{#> nav nav--IsDocked=true nav--attribute='aria-label="Global"'}}
       {{#> nav-list}}
         {{#> nav-item}}
-          {{#> nav-link nav-link--href="#" nav-link--icon="cube"}}
-            Cube
-          {{/nav-link}}
+          {{> nav-link nav-link--href="#" nav-link--icon="cube"}}
         {{/nav-item}}
         {{#> nav-item}}
-          {{#> nav-link nav-link--href="#" nav-link--current="true" nav-link--icon="folder"}}
-            Dir
-          {{/nav-link}}
+          {{> nav-link nav-link--href="#" nav-link--current="true" nav-link--icon="folder"}}
         {{/nav-item}}
         {{#> nav-item}}
-          {{#> nav-link nav-link--href="#" nav-link--icon="cloud"}}
-            Cloud
-          {{/nav-link}}
+          {{> nav-link nav-link--href="#" nav-link--icon="cloud"}}
         {{/nav-item}}
         {{#> nav-item}}
-          {{#> nav-link nav-link--href="#" nav-link--icon="code"}}
-            Code
-          {{/nav-link}}
+          {{> nav-link nav-link--href="#" nav-link--icon="code"}}
         {{/nav-item}}
       {{/nav-list}}
     {{/nav}}
