--- a/src/patternfly/components/Page/page.hbs
+++ b/src/patternfly/components/Page/page.hbs
@@ -1,7 +1,7 @@
 <div class="{{pfv}}page
   {{setModifiers
     page--HasNoSidebar='pf-m-no-sidebar'
-    page--IsDocked='pf-m-docked'
+    page--HasDock='pf-m-dock'
     page--modifier=page--modifier}}"
   {{#if page--attribute}}
     {{{page--attribute}}}
