--- a/src/patternfly/components/Compass/compass.hbs
+++ b/src/patternfly/components/Compass/compass.hbs
@@ -3,9 +3,7 @@
     pf-m-animate-smoothly
   {{/unless}}
   {{setModifiers
-    compass--IsStart='pf-m-start'
-    compass--IsEnd='pf-m-end'
-    compass--IsDocked='pf-m-docked'
+    compass--HasDock='pf-m-dock'
     compass--modifier=compass--modifier}}"
   {{#if compass--attribute}}
     {{{compass--attribute}}}
