--- a/src/patternfly/components/Masthead/masthead-image.hbs
+++ b/src/patternfly/components/Masthead/masthead-image.hbs
@@ -1,5 +1,6 @@
 {{#if masthead-logo--IsCompact}}
-<svg width="37px" height="37px" viewBox="0 0 158 158" aria-hidden="true">
+<svg width="37px" height="37px" viewBox="0 0 158 158">
+    <title>PF-HorizontalLogo-Color </title>
     <defs>
         <linearGradient x1="68%" y1="2.25860997e-13%" x2="32%" y2="100%" id="linearGradient-1">
             <stop stop-color="#2B9AF3" offset="0%"></stop>
